openshift-gitops-cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-gitops-cluster
  labels:
    openshift.io/cluster-monitoring: "true"
