openshift-gitops-cluster/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitops-cluster
spec:
  subdomain: gitops-cluster
  to:
    kind: Service
    name: cluster-argocd-server
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
